--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -250,7 +250,8 @@
    "outputs": [],
    "source": [
     "from src.image_utils import plot_tiff_images\n",
-    "import random"
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
@@ -262,13 +263,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 16/16 images from ang20191016t163955_r7680_c256_w512_h512 directory.\n"
+      "Extracted 16/16 images from ang20190923t170747_r3502_c419_w151_h151 directory.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54e3706070cb41698b1f2b12dd17046f",
+       "model_id": "99869c146fdb4d1bbcf5033a79142ebe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +283,7 @@
    ],
    "source": [
     "# Get sample image to display\n",
-    "test_dir = random.choice(train_easy_df['id'].values)\n",
+    "test_dir = np.random.choice(train_easy_df['id'].values)\n",
     "\n",
     "plot_tiff_images(test_dir)"
    ]
@@ -290,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.4 ('venv': venv)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -304,12 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "3c3cc3a6aa78548a1c5272dfe6030f2ab11d7a738ddd52e0f0eac14b62bfaa99"
-   }
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
